fix(settings): fix vertical scroll problem on iPhone 4s

--- a/src/app/settings/settings.css
+++ b/src/app/settings/settings.css
@@ -75,7 +75,7 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 50px;
   border-style: solid;
   border-width: 0px;
   border-top-width: 2px;
